Add ability to allow network probes without pod network.
