# api/openapi-spec/swagger.json
@@ -6256,6 +6256,10 @@
       "description": "NodeSelector is a selector which must be true for the vmi to fit on a node.\nSelector which must match a node's labels for the vmi to be scheduled on that node.\nMore info: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/\n+optional",
       "type": "object"
      },
+     "probeNoPodNetwork": {
+      "description": "Allow probes without pod network.\nAdvanced setups may have the ability to probe network without the default Pod network.\nThis will bypass the pod network validation for probes.",
+      "type": "boolean"
+     },
      "readinessProbe": {
       "description": "Periodic probe of VirtualMachineInstance service readiness.\nVirtualmachineInstances will be removed from service endpoints if the probe fails.\nCannot be updated.\nMore info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle#container-probes\n+optional",
       "$ref": "#/definitions/v1.Probe"
